--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
                 <div class="main-about-image"><img src="assets/IMG/author.jpg" alt="author"></div>
                 <div class="main-about-text">
                     <p>I am Ankit Raj. A frontend web developer, graphics designer and videoeditor. I am currently
-                        learning frontend (HTML, CSS and JS). I'm currently studing in class 10. I'm from Aurangabad,
+                        learning frontend (HTML, CSS and JS). I'm currently studying in class 10. I'm from Aurangabad,
                         Bihar, India.</p>
                     <div class="main-about-text-inner">
                         <p><span>Age :</span> 14 Years</p>
-                        <p><span>School :</span> Paramount Public School</p>
+                        <p><span>School :</span> Vivekanand VIP School.</p>
                         <p><span>Email :</span> ankit_gamer69@hotmail.com</p>
-                        <p><span>Place :</span> Jhumai, Bihar, India.</p>
+                        <p><span>Place :</span> Aurangabad, Bihar, India.</p>
                     </div>
                     <button class="btn">Resume</button>
                 </div>
