--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="keywords"
         content="website, Portfolio, github, html, css, webdev, googlefont, ankit, Ankit raj, freehost, html project">
     <meta name="google-site-verification" content="-_vGTZ4HnVXhPBb64aXsyhaFefMCewkbBGKhiUa_xZg">
+    <meta name="google-adsense-account" content="ca-pub-4361307844960518">
     <!--Meta Tags End-->
     <!--Title-->
     <title>Ankit Raj | Portfolio Website</title>
