--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div class="main-content-text-social">
                     <a href="https://www.instagram.com/ankit_gamer69/"><i class="fa fa-instagram"
                             aria-hidden="true"></i></a>
-                    <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                    <a href="https://www.linkedin.com/in/ankitrajdev"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                     <a href="https://github.com/ankitrajdev"><i class="fa fa-github" aria-hidden="true"></i></a>
                 </div>
             </div>
